# US-Job-Market-Intel

./: .gitignore  GITHUB_SETUP.md  LICENSE  QUICKSTART_WINDOWS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: python-tests.yml
data/seeds/: companies.csv  discovery_seeds.yml  industry_mapping.yml  role_taxonomy.yml  skills.yml
scripts/: powerbi_notes.md  run_daily_example.ps1  run_daily_example.sh
src/jobintel/: __init__.py  cli.py  config.py  logging.py
src/jobintel/connectors/: __init__.py  base.py  discovery.py  greenhouse.py  lever.py
src/jobintel/enrich/: __init__.py  industry.py  role_family.py  skills.py
src/jobintel/pipeline/: __init__.py  dedupe.py  extract.py  latest.py  load.py  metrics.py  transform.py
src/jobintel/schema/: __init__.py  models.py
src/jobintel/tests/: __init__.py  conftest.py  test_connectors_fixtures.py  test_dedupe.py  test_industry.py  test_role_family.py  test_us_filter.py
src/jobintel/utils/: __init__.py  hashing.py  http.py  locations_us.py  text.py
